Match-id-97b23c569d64b8eeae8d25b3a99f3cf92ab8b060

--- a/api/external/api-resource-catalog-res.yaml
+++ b/api/external/api-resource-catalog-res.yaml
@@ -14,7 +14,7 @@ paths:
       x-rd-admin-role: 'N'
       x-auditor-role: 'Y'
       x-dp-admin-role: 'Y'
-      x-public-api: 'Y'
+      x-public-api: 'N'
       x-sysadmin-role: 'Y'
       produces:
         - application/json
