Match-id-3f79241d709ebdd5f796bd3a31bf275475a7872d

--- a/api/external/api-storage-backup-plugin.yaml
+++ b/api/external/api-storage-backup-plugin.yaml
@@ -775,3 +775,7 @@ definitions:
         type: integer
         format: int32
         description: 权限级别：0-只读，1-读写
+      rootSquash:
+        type: integer
+        format: int32
+        description: '0: 表示不允许客户端以root用户访问; 1:表示允许客户端以root用户访问'
