Match-id-2c93e49a53e38d7b8fcad49c7e6ce7db142525b8

--- a/api/internal/api-dee-indexer-internal.yaml
+++ b/api/internal/api-dee-indexer-internal.yaml
@@ -375,9 +375,12 @@ definitions:
       - agents
   ReportRfiRequest:
     properties:
-      jobRequestId:
+      requestId:
         type: string
         description: 请求id
+      taskId:
+        type: string
+        description: 任务id
       status:
         type: integer
         format: int32
@@ -401,7 +404,8 @@ definitions:
         type: array
     title: ReportRfiRequest
     required:
-      - jobRequestId
+      - requestId
+      - taskId
       - status
   ListCopyRequest:
     properties:
