--- a/api/external/api-alarm.yaml
+++ b/api/external/api-alarm.yaml
@@ -1301,7 +1301,6 @@ paths:
         - Authorization:
             - global
       deprecated: false
-  '/v1/notify/emails/{email}':
     delete:
       tags:
         - alarm-notify-rule-api
@@ -1315,11 +1314,12 @@ paths:
           description: Access token
           required: true
           type: string
-        - name: email
-          in: path
-          description: 邮件通知地址
-          required: false
-          type: string
+        - name: emailRequest
+          in: body
+          required: true
+          description: 删除通知邮箱地址请求体
+          schema:
+            $ref: '#/definitions/EmailRequest'
       responses:
         '200':
           description: OK
@@ -1332,7 +1332,6 @@ paths:
       security:
         - Authorization:
             - global
-      deprecated: false
   /v1/notify/rules:
     get:
       tags:
@@ -2538,7 +2537,7 @@ definitions:
         description: 控制器名称
       hexEngineId:
         type: string
-        example: '32 31 30 32 33 35 33 47 54 44 31 30 4C 39 30 30 30 30 30 37 30 41'
+        example: 32 31 30 32 33 35 33 47 54 44 31 30 4C 39 30 30 30 30 30 37 30 41
         description: 控制器snmp代理16进制engine ID
     title: SnmpSecurityAgentResponse
     description: 查询各控制器安全代理信息响应
